common/app/assets/stylesheets/module/_adslot.scss
.ad-slot {
    z-index: 1000;
    overflow: hidden;

    .js-off & {
        display: none;
    }
}
.ad-slot__label {
    height: $mpu-ad-label-height;
    background-color: $c-neutral8;
    margin: 0 auto;
    padding: 0 ($gs-baseline/3)*2;
    border-top: 1px solid $c-neutral5;
    color: $c-neutral2-contrasted;
    text-align: right;
    @include box-sizing(border-box);
    @include f-data;
    @include font-size(12, 20);
}

/**
 * Banner ads
 */
.top-banner-ad-container--mobile {
    text-align: center;
    background-color: #f0f0f0;

    .ad-slot--top-banner-ad {
        height: 50px;
        padding: $gs-baseline 0;

        @include mq(tablet) {
            display: none;
        }
    }
}
.top-banner-ad-container--desktop {
    background-color: $c-neutral8;
    border-bottom: 2px solid $c-neutral4;
    display: none;

    @include mq(tablet) {
        .js-on & {
            display: block;
        }
    }
    .ad-slot--top-banner-ad {
        display: none;
        min-height: 90 + ($gs-row-height/2);
        padding-bottom: $gs-row-height/2;

        @include mq(tablet) {
            .js-on & {
                display: block;
            }
        }
    }
    .ad-slot__label {
        text-align: left;
        border-top: 0;
        padding: 0;
        height: $gs-row-height/2;
    }
    iframe {
        -webkit-transform: translateZ(0);
        transform: translateZ(0);
        @include transition(height 1s cubic-bezier(0, 0, 0, .985));
    }
    @include mq(wide) {
        .has-page-skin & {
            .ad-slot--top-banner-ad {
                width: 970px;
                padding-left: 0;
                text-align: center;
            }
            .ad-slot__label {
                width: 720px;
            }
        }
    }
}
.top-banner-ad-container--facia-layout .ad-slot--top-banner-ad {
    @include mq(mobile, faciaLeftCol) {
        text-align: center;
    }
    @include mq(faciaLeftCol) {
        margin: 0 auto;
        width: gs-span(14) - ($left-column + $gs-gutter);
        padding-left: $left-column + $gs-gutter;
    }
    @include mq(wide) {
        width: gs-span(16) - ($left-column-wide + $gs-gutter);
        padding-left: $left-column-wide + $gs-gutter;
    }
    @include mq(tablet, faciaLeftCol) {
        .ad-slot__label {
            width: 728px;
        }
    }
}
.top-banner-ad-container--article-layout .ad-slot--top-banner-ad {
    text-align: center;
}

/**
 * Inline ads
 */
.ad-slot--inline,
.ad-slot--container-inline,
.ad-slot--gallery-inline,
.ad-slot--liveblog-inline {
    width: 300px;
    margin: $gs-baseline auto;
    min-height: 50 + $mpu-ad-label-height;
    text-align: center;

    @include mq(mobileLandscape) {
        width: 320px;
    }
    @include mq(tablet) {
        height: 250px + $mpu-ad-label-height;
        width: auto;
    }
    .ad-slot__label {
        background-color: transparent;
    }
}
.ad-slot--inline,
.ad-slot--container-inline {
    background-color: $c-neutral8;

    @include mq(tablet) {
        width: 300px;
    }
}
.ad-slot--inline {
    @include mq(tablet) {
        float: right;
        margin-top: $gs-baseline/3;
        margin-left: $gs-gutter;
    }
}
.ad-slot--container-inline {
    @include mq(tablet) {
        position: absolute;
        top: 1px;
        right: 0;
        margin: 0;
    }
}
.ad-slot--gallery-inline,
.ad-slot--liveblog-inline {
    @include mq(tablet) {
        margin-top: $gs-baseline*2;
        margin-bottom: $gs-baseline*2;
        padding-bottom: $gs-baseline*2;
    }
}
.ad-slot--gallery-inline {
    background-color: lighten($c-mediaBackground, 2.5%);

    .ad-slot__label {
        color: $c-neutral3;
        border-top-color: $c-neutral2;
    }
}
.ad-slot--liveblog-inline {
    background-color: $c-neutral6;

    .ad-slot__label {
        color: $c-neutral2;
        border-top-color: $c-neutral3;
    }
}
.ad-slot--mpu-banner-ad {
    display: none;
    min-height: 250 + $mpu-ad-label-height;
    margin-bottom: $gs-baseline*2;

    @include mq(rightCol) {
        display: block;
    }
}
.ad-slot--sponsored {
    overflow: hidden;
    border-top: 1px solid $c-neutral5;
    padding-top: $gs-baseline/2;
}
.ad-slot--sponsored__article {
    display: block;
    position: relative;
    min-height: gs-height(2);
    padding: 0 $gs-gutter/2 $gs-baseline/2 (gs-span(2) + $gs-gutter);
    margin-bottom: $gs-baseline/2;
    border-bottom: 1px solid $c-neutral5;
}
.ad-slot--sponsored__image {
    position: absolute;
    top: 0;
    left: $gs-gutter/2;
}
.ad-slot--sponsored__text,
.ad-slot--sponsored__label {
    color: $c-neutral2;
}
.ad-slot--sponsored__text {
    @include f-headlineSans;
    @include font-size(14, 18);
}
.ad-slot--sponsored__label {
    float: left;
    clear: left;
    padding-left: $gs-gutter/2;
    @include fs-data(3);
}
.ad-slot--sponsored__link {
    float: right;
}

/**
 * Commercial Components
 */
.ad-slot--commercial-component,
.ad-slot--commercial-component-high {
    min-height: 88px;

    @include mq(wide) {
        .has-page-skin & {
            margin-left: auto;
            margin-right: auto;
            width: gs-span(12) + ($gs-gutter*2);
        }
    }
}
.ad-slot--commercial-component-high {
    display: none;

    @include mq(desktop) {
        display: block;
    }
}

/**
 * Badges
 */
.ad-slot--paid-for-badge {
    padding: 2px 0 $gs-baseline;

    // badges are always broken out, so hide the actual ad
    iframe {
        display: none;
    }
    .ad-slot--paid-for-badge__inner {
        overflow: hidden;

        @include mq(leftCol) {
            .content__meta-container--no-byline & {
                padding-top: $gs-baseline / 3;
            }
        }
    }
    .ad-slot--paid-for-badge__header,
    .ad-slot--paid-for-badge__label,
    .ad-slot--paid-for-badge__help {
        @include fs-data(3);
    }
    .ad-slot--paid-for-badge__header,
    .ad-slot--paid-for-badge__label {
        margin: 0;
    }
    .ad-slot--paid-for-badge__header {
        font-weight: bold;
    }
    .ad-slot--paid-for-badge__link,
    .ad-slot--paid-for-badge__help {
        float: left;
        clear: left;
    }
    .ad-slot--paid-for-badge__link {
        display: block;
        margin-top: $gs-row-height/4;
    }
    .ad-slot--paid-for-badge__logo {
        display: block;
    }
    .ad-slot--paid-for-badge__help {
        @include fs-textSans(1, $size-only: true);
        margin-top: $gs-baseline/3;
    }
}
.ad-slot--adbadge {
    .ad-slot--paid-for-badge__header,
    .ad-slot--paid-for-badge__label {
        color: $c-neutral2-contrasted;
    }
    @include mq(mobile, $until: faciaLeftCol) {
        &.ad-slot--paid-for-badge--front .ad-slot--paid-for-badge__link {
            margin-top: get-line-height(data, 3)*-2;

            .ad-slot--commercial-component & {
                margin-top: -(get-line-height(data, 3));
            }
        }
    }
}
.ad-slot--spbadge {
    .ad-slot--paid-for-badge__header,
    .ad-slot--paid-for-badge__label {
        color: $c-neutral2;
    }

    @include mq(mobile, $until: faciaLeftCol) {
        &.ad-slot--paid-for-badge--front .ad-slot--paid-for-badge__link {
            margin-top: get-line-height(data, 3)*-1;
        }
    }
}
.ad-slot--paid-for-badge--article {
    border-bottom: 1px dotted $c-neutral5;

    @include mq(leftCol) {
        border-bottom-width: 0;
        border-top: 1px dotted $c-neutral5;
    }
    // magic numbers, height of the ad badge
    &.ad-slot--spbadge {
        min-height: 135px;
    }
    &.ad-slot--adbadge {
        min-height: 155px;
    }
}
.ad-slot--paid-for-badge--live-blog {
    @include mq(rightCol) {
        padding-top: $gs-baseline*2;
    }
}
.ad-slot--paid-for-badge--front {
    @include clearfix;
    position: relative;
    min-height: 90px;
    z-index: auto;

    .ad-slot--paid-for-badge__link {
        position: relative;
        float: right;
    }
    @include mq(tablet) {
        margin-left: 50%;
        padding-top: 0;
        margin-top: -$gs-row-height;
    }
    @include mq(desktop) {
        margin-left: 62%;
    }
    @include mq(tablet, $until: faciaLeftCol) {
        .container--has-toggle & {
            margin-right: gs-span(1);
        }
    }

    @mixin comm-paid-logo-placement {
        clear: left;
        padding: 0;
        margin: 0;
        float: left;
        min-height: 0;
        margin-top: 4px;

        .ad-slot--paid-for-badge__link {
            float: none;
            margin-top: $gs-row-height/4;
        }
    }

    @include mq(leftCol) {
        .l-side-margins--layout-content .ad-slot--commercial-component & {
            @include comm-paid-logo-placement;
        }
    }

    @include mq(faciaLeftCol) {
        @include comm-paid-logo-placement;
    }

    @include mq(wide) {
        .has-page-skin & {
            margin-left: 50%;
            width: auto;
            float: none;
            margin-top: -$gs-row-height;

            .ad-slot--paid-for-badge__link {
                float: right;
            }
            &.ad-slot--adbadge .ad-slot--paid-for-badge__link {
                margin-top: get-line-height(data, 3)*-2;
            }
            &.ad-slot--spbadge .ad-slot--paid-for-badge__link {
                margin-top: get-line-height(data, 3)*-1;
            }
        }
        .has-page-skin .container--has-toggle & {
            margin-right: gs-span(1);
        }
    }
}
.facia-container--sponsored .container:first-child,
.facia-container--advertisement-feature .container:first-child,
.container--sponsored,
.container--advertisement-feature {
    .container__header + .container__body {
        margin-top: 104px;

        @include mq(tablet) {
            margin-top: 78px;
        }
        @include mq(faciaLeftCol) {
            margin-top: 0;
        }
    }
}

/**
 * Page Skins
 */
.ad-slot--page-skin {
    height: 0;
}
@include mq(mobile, $until: wide) {
    .has-page-skin {
        background-image: none !important;
    }
}

